--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -1,187 +1,193 @@
 [DirMenu]
 menu1=-program files
-menu2=Program Files
-cmd2=cd c:\Program Files
-menu3=Program Files (x86)
-cmd3=cd c:\Program Files (x86)
-menu4=Windows Fonts
-cmd4=cd C:\Windows\Fonts
-menu5=System32
-cmd5=cd c:\Windows\System32
-menu6=PRINTERS
-cmd6=cd C:\Windows\System32\spool\PRINTERS
-menu7=SendTo
-cmd7=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
-menu8=AdobeGCClient
-cmd8=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
-menu9=SeleniumBasic
-cmd9=cd c:\Program Files\SeleniumBasic
-menu10=VBA7.1
-cmd10=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
-menu11=Desktop
-cmd11=cd c:\Users\minhwasoo\Desktop
-menu12=Documents
-cmd12=cd c:\Users\minhwasoo\Documents
-menu13=Downloads
-cmd13=cd c:\Users\minhwasoo\Downloads
-menu14=Pictures
-cmd14=cd c:\Users\minhwasoo\Pictures
-menu15=minhwasoo
-cmd15=cd c:\Users\minhwasoo
-menu16=Windows
-cmd16=cd c:\Windows
-menu17=color profile
-cmd17=cd c:\Windows\System32\spool\drivers\color
-menu18=AutoCAD 2021
-cmd18=cd c:\Program Files\Autodesk\AutoCAD 2021
-menu19=autocad 21 : Support & y
-cmd19=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
-menu20=--
-menu21=-total commander
-menu22=totalcmd
-cmd22=cd C:\Program Files\totalcmd
-menu23=plugins , totalcommander
-cmd23=cd %COMMANDER_PATH%\plugins
-menu24=util_tcer
-cmd24=cd %COMMANDER_PATH%\plugins\utils\util_tcer
-menu25=Total Commander ini
-cmd25=cd %COMMANDER_PATH%\ini
-menu26=ini --> 02_python
-cmd26=cd %COMMANDER_PATH%\ini\02_python
-menu27=ini --> config
-cmd27=cd %COMMANDER_PATH%\ini\config
-menu28=ini --> config --> Dos Batch File Example
-cmd28=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu29=ini --> 01_wincmd.ini --> minhwasoo
-cmd29=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu30=ini --> GHISLER
-cmd30=cd %COMMANDER_PATH%\ini\GHISLER
-menu31=ini --> icons_dll
-cmd31=cd %COMMANDER_PATH%\ini\icons dll
-menu32=RunAsTool
-cmd32=cd %COMMANDER_PATH%\RunAsTool
-menu33=98_Sordum
-cmd33=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu34=99_NirSoft
-cmd34=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu35=cmder config
-cmd35=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu36=--
-menu37=-ExaData
-menu38=11_exaData
-cmd38=cd d:\11_exaData
-menu39=04_dev
-cmd39=cd d:\11_exaData\04_dev
-menu40=05_OS
-cmd40=cd d:\11_exaData\05_OS
-menu41=OS --> 05_WSH
-cmd41=cd d:\11_exaData\05_OS\05_WSH
-menu42=06_Utility
-cmd42=cd d:\11_exaData\06_util
-menu43=util --> 016_dev Tool
-cmd43=cd d:\11_exaData\06_util\016_dev tool
-menu44=util --> 010_ZZATURI
-cmd44=cd d:\11_exaData\06_util\010_ZZATURI
-menu45=util --> zzaturi --> 01_Test Program
-cmd45=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu46=12_BAT_FFMPEG
-cmd46=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu47=util --> 099_Game
-cmd47=cd d:\11_exaData\06_util\099_Game
-menu48=util --> 99_Game --> 10_cmder
-cmd48=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu49=util --> 099_Game --> tcplugin --> 00_Program Data
-cmd49=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu50=--
-menu51=-WSL2
-menu52=WSL LocalState EXT4
-cmd52=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu53=WSL minhwasoo
-cmd53=cd a:\home\minhwasoo
-menu54=--
-menu55=-Git Bash
-menu56=Git
-cmd56=cd C:\Program Files\Git
-menu57=gitbash /usr/bin
-cmd57=cd C:\Program Files\Git\usr\bin
-menu58=gitbash - mingw64 - bin
-cmd58=cd C:\Program Files\Git\mingw64\bin
-menu59=gitbvash - mingw64 - git-core
-cmd59=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu60=gitbash - mergetools
-cmd60=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu61=--
-menu62=-Appdata and Local
-menu63=Hnc --> Bin
-cmd63=cd c:\Program Files (x86)\HNC\Office 2022\HOffice120\Bin
-menu64=Sublime Installed Packages
-cmd64=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu65=Sublime Packages
-cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu66=Sublime Packages User
-cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu67=AppData --> Local
-cmd67=cd C:\Users\minhwasoo\AppData\Local
-menu68=AddData --> Roaming
-cmd68=cd C:\Users\minhwasoo\AppData\Roaming
-menu69=Appdata --> FlowLauncher CustomIcons
-cmd69=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu70=Appdata --> Bing WPImages
-cmd70=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu71=Appdata --> WindowsTerminal Setting
-cmd71=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu72=ProgramData
-cmd72=cd C:\ProgramData
-menu73=programdata ---> 01_Inspection Tool
-cmd73=cd C:\ProgramData\36_Automation\01_Inspection Tool
-menu74=--
-menu75=-12_dev --> excel
-menu76=d:/12_dev/  Action and Configuration
-cmd76=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu77=02_Excel   --> 07_LandSlide
-cmd77=cd d:\12_dev\02_Excel\07_LandSlide
-menu78=02_Excel2 --> 01_Acquifer Pumping Test
-cmd78=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
-menu79=--
-menu80=-HardRain, Report
-menu81=WHPA
-cmd81=cd c:\WHPA
-menu82=04_Reference Data
-cmd82=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu83=11_JungCheon Photo by Season
-cmd83=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu84=05_ihanseol - 2020
-cmd84=cd d:\09_hardRain\05_ihanseol - 2020
-menu85=06_ihanseol - 2021
-cmd85=cd d:\09_hardRain\06_ihanseol - 2021
-menu86=07_ihanseol - 2022
-cmd86=cd d:\09_hardRain\07_ihanseol - 2022
-menu87=08_ihanseol - 2023
-cmd87=cd d:\09_hardRain\08_ihanseol - 2023
-menu88=--
-menu89=02_Book
-cmd89=cd d:\02_Book
-menu90=03_download
-cmd90=cd d:\03_download
-menu91=03_my_script
-cmd91=cd d:\12_dev\03_visual_lisp\03_my_script
-menu92=08_나의작업
-cmd92=cd d:\08_나의작업\
-menu93=04_mp3
-cmd93=cd d:\04_mp3
-menu94=05_Send
-cmd94=cd d:\05_Send
-menu95=06_Send2
-cmd95=cd d:\06_Send2
-menu96=C:_Temp
-cmd96=cd c:\Temp
-menu97=e: download
-cmd97=cd e:\download
-menu98=Bing
-cmd98=cd d:\10_photo\Desktop Pictures\bing
-menu99=13_ExaVideo
-cmd99=cd d:\13_ExaVideo
-menu100=NAS4DUAL 06_util
-cmd100=cd z:\11_exaData\06_util
-menu101=Nas --> 08_ihanseol - 2023
-cmd101=cd z:\09_hardRain\08_ihanseol - 2023
+menu2=Python -->  Appdata Local Programs
+cmd2=cd c:\Users\minhwasoo\AppData\Local\Programs\Python
+menu3=Program Files
+cmd3=cd c:\Program Files
+menu4=Program Files (x86)
+cmd4=cd c:\Program Files (x86)
+menu5=Windows Fonts
+cmd5=cd C:\Windows\Fonts
+menu6=System32
+cmd6=cd c:\Windows\System32
+menu7=PRINTERS
+cmd7=cd C:\Windows\System32\spool\PRINTERS
+menu8=SendTo
+cmd8=cd C:\Users\minhwasoo\AppData\Roaming\Microsoft\Windows\SendTo
+menu9=AdobeGCClient
+cmd9=cd c:\Program Files (x86)\Common Files\Adobe\AdobeGCClient
+menu10=SeleniumBasic
+cmd10=cd c:\Program Files\SeleniumBasic
+menu11=VBA7.1
+cmd11=cd c:\Program Files\Microsoft Office\root\vfs\ProgramFilesCommonX64\Microsoft Shared\VBA\VBA7.1
+menu12=Desktop
+cmd12=cd c:\Users\minhwasoo\Desktop
+menu13=Documents
+cmd13=cd c:\Users\minhwasoo\Documents
+menu14=Downloads
+cmd14=cd c:\Users\minhwasoo\Downloads
+menu15=Pictures
+cmd15=cd c:\Users\minhwasoo\Pictures
+menu16=minhwasoo
+cmd16=cd c:\Users\minhwasoo
+menu17=Windows
+cmd17=cd c:\Windows
+menu18=color profile
+cmd18=cd c:\Windows\System32\spool\drivers\color
+menu19=AutoCAD 2021
+cmd19=cd c:\Program Files\Autodesk\AutoCAD 2021
+menu20=autocad 21 : Support & y
+cmd20=cd C:\Users\minhwasoo\AppData\Roaming\Autodesk\AutoCAD 2021\R24.0\enu\Support
+menu21=--
+menu22=-total commander
+menu23=totalcmd
+cmd23=cd C:\Program Files\totalcmd
+menu24=plugins , totalcommander
+cmd24=cd %COMMANDER_PATH%\plugins
+menu25=util_tcer
+cmd25=cd %COMMANDER_PATH%\plugins\utils\util_tcer
+menu26=Total Commander ini
+cmd26=cd %COMMANDER_PATH%\ini
+menu27=ini --> 02_python
+cmd27=cd %COMMANDER_PATH%\ini\02_python
+menu28=ini --> config
+cmd28=cd %COMMANDER_PATH%\ini\config
+menu29=ini --> config --> Dos Batch File Example
+cmd29=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu30=ini --> 01_wincmd.ini --> minhwasoo
+cmd30=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu31=ini --> GHISLER
+cmd31=cd %COMMANDER_PATH%\ini\GHISLER
+menu32=ini --> icons_dll
+cmd32=cd %COMMANDER_PATH%\ini\icons dll
+menu33=RunAsTool
+cmd33=cd %COMMANDER_PATH%\RunAsTool
+menu34=98_Sordum
+cmd34=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu35=99_NirSoft
+cmd35=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu36=cmder config
+cmd36=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu37=--
+menu38=-ExaData
+menu39=11_exaData
+cmd39=cd d:\11_exaData
+menu40=04_dev
+cmd40=cd d:\11_exaData\04_dev
+menu41=05_OS
+cmd41=cd d:\11_exaData\05_OS
+menu42=OS --> 05_WSH
+cmd42=cd d:\11_exaData\05_OS\05_WSH
+menu43=06_Utility
+cmd43=cd d:\11_exaData\06_util
+menu44=util --> 016_dev Tool
+cmd44=cd d:\11_exaData\06_util\016_dev tool
+menu45=util --> 010_ZZATURI
+cmd45=cd d:\11_exaData\06_util\010_ZZATURI
+menu46=util --> zzaturi --> 01_Test Program
+cmd46=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu47=12_BAT_FFMPEG
+cmd47=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu48=util --> 099_Game
+cmd48=cd d:\11_exaData\06_util\099_Game
+menu49=util --> 99_Game --> 10_cmder
+cmd49=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu50=util --> 099_Game --> tcplugin --> 00_Program Data
+cmd50=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu51=--
+menu52=-WSL2
+menu53=WSL LocalState EXT4
+cmd53=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu54=WSL minhwasoo
+cmd54=cd a:\home\minhwasoo
+menu55=--
+menu56=-Git Bash
+menu57=Git
+cmd57=cd C:\Program Files\Git
+menu58=gitbash /usr/bin
+cmd58=cd C:\Program Files\Git\usr\bin
+menu59=gitbash - mingw64 - bin
+cmd59=cd C:\Program Files\Git\mingw64\bin
+menu60=gitbvash - mingw64 - git-core
+cmd60=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu61=gitbash - mergetools
+cmd61=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu62=--
+menu63=-Appdata and Local
+menu64=Hnc --> Bin
+cmd64=cd c:\Program Files (x86)\HNC\Office 2022\HOffice120\Bin
+menu65=Sublime Installed Packages
+cmd65=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu66=Sublime Packages
+cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu67=Sublime Packages User
+cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu68=gen_py
+cmd68=cd c:\Users\minhwasoo\AppData\Local\Temp\gen_py
+menu69=AppData --> Local
+cmd69=cd C:\Users\minhwasoo\AppData\Local
+menu70=AddData --> Roaming
+cmd70=cd C:\Users\minhwasoo\AppData\Roaming
+menu71=Appdata --> FlowLauncher CustomIcons
+cmd71=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu72=Appdata --> Bing WPImages
+cmd72=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu73=Appdata --> WindowsTerminal Setting
+cmd73=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu74=ProgramData
+cmd74=cd C:\ProgramData
+menu75=programdata ---> 01_Inspection Tool
+cmd75=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu76=--
+menu77=-12_dev --> excel
+menu78=d:/12_dev/  Action and Configuration
+cmd78=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu79=02_Excel   --> 07_LandSlide
+cmd79=cd d:\12_dev\02_Excel\07_LandSlide
+menu80=02_Excel2 --> 01_Acquifer Pumping Test
+cmd80=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu81=04_PyhtonDemoDojang
+cmd81=cd d:\12_dev\04_PyhtonDemoDojang
+menu82=--
+menu83=-HardRain, Report
+menu84=WHPA
+cmd84=cd c:\WHPA
+menu85=04_Reference Data
+cmd85=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu86=11_JungCheon Photo by Season
+cmd86=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu87=05_ihanseol - 2020
+cmd87=cd d:\09_hardRain\05_ihanseol - 2020
+menu88=06_ihanseol - 2021
+cmd88=cd d:\09_hardRain\06_ihanseol - 2021
+menu89=07_ihanseol - 2022
+cmd89=cd d:\09_hardRain\07_ihanseol - 2022
+menu90=08_ihanseol - 2023
+cmd90=cd d:\09_hardRain\08_ihanseol - 2023
+menu91=--
+menu92=02_Book
+cmd92=cd d:\02_Book
+menu93=03_download
+cmd93=cd d:\03_download
+menu94=03_my_script
+cmd94=cd d:\12_dev\03_visual_lisp\03_my_script
+menu95=08_나의작업
+cmd95=cd d:\08_나의작업\
+menu96=04_mp3
+cmd96=cd d:\04_mp3
+menu97=05_Send
+cmd97=cd d:\05_Send
+menu98=06_Send2
+cmd98=cd d:\06_Send2
+menu99=C:_Temp
+cmd99=cd c:\Temp
+menu100=e: download
+cmd100=cd e:\download
+menu101=Bing
+cmd101=cd d:\10_photo\Desktop Pictures\bing
+menu102=13_ExaVideo
+cmd102=cd d:\13_ExaVideo
+menu103=NAS4DUAL 06_util
+cmd103=cd z:\11_exaData\06_util
+menu104=Nas --> 08_ihanseol - 2023
+cmd104=cd z:\09_hardRain\08_ihanseol - 2023
