--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -232,8 +232,8 @@ Divider=500
 DividerQuickView=500
 DividerComments=500
 Tabstops=640,644,707,580,1472,90
-SyncX=3639
-SyncY=362
+SyncX=3668
+SyncY=231
 SyncDX=1290
 SyncDY=911
 SyncMax=0
@@ -255,6 +255,11 @@ RenameDX=1092
 RenameDY=514
 RenameMax=0
 RenameTabs=145,183,435,510,662
+CmdSelX=3946
+CmdSelY=463
+CmdSelDX=803
+CmdSelDY=612
+CmdSelMax=0
 [3840x2160 (8x16)]
 SyncX=4438
 SyncY=390
