--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -189,6 +189,12 @@ cmd=python "c:\Program Files\totalcmd\ini\02_python\imageTrim.py"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu= Image Trim
 
+[em_GenerateRandomString]
+cmd= "c:\Program Files\totalcmd\ini\02_python\RandomString.cmd"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= Generate Random String
+
+
 
 ; ****************************************************************************************************
 
