--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -51,45 +51,45 @@
 
 
 [SearchName]
-0=HWPWMko-KR120
-1=process
-2=distant
-3=qbit
-4=ezpdf
-5=bak
-6=1143
-7=inc
-8=bpl
-9=tera
-10=terra
-11=*.aqt
-12=aqtw*.exe
-13=aqu*.exe
-14=aqutesolv
-15=emf
-16=사진대지
-17=*.tab
-18=pdf
-19=require*
+0=수부리
+1=보름달과
+2=전주
+3=special
+4=HWPWMko-KR120
+5=process
+6=distant
+7=qbit
+8=ezpdf
+9=bak
+10=1143
+11=inc
+12=bpl
+13=tera
+14=terra
+15=*.aqt
+16=aqtw*.exe
+17=aqu*.exe
+18=aqutesolv
+19=emf
 
 [SearchIn]
-0=c:\Users\minhwasoo\AppData\Roaming\Hnc\User
-1=d:\11_exaData\06_util\010_ZZATURI
-2=d:\11_exaData\06_util
-3=x:\A1_exaVideo
-4=d:\09_hardRain\08_ihanseol - 2023
-5=d:\09_hardRain
-6=c:\Users\minhwasoo\Documents\SynEdit
-7=c:\Users\minhwasoo\Documents\P4D
-8=d:\05_Send
-9=d:\09_hardRain\01_2017
-10=C:\Program Files\totalcmd
-11=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-12=z:\11_exaData
-13=F:\11_exaData\06_util
-14=f:\
-15=f:\11_exaData\06_util
-16=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-17=z:\11_exaData\06_util
-18=d:\13_전주도장컴 자료
-19=d:\13_전주도장컴 자료\drive d\Temp
+0=d:\09_hardRain\01_2017
+1=d:\02_Book
+2=d:\09_hardRain\08_ihanseol - 2023\Z01_소소한작업들
+3=d:\11_exaData\06_util
+4=c:\Users\minhwasoo\AppData\Roaming\Hnc\User
+5=d:\11_exaData\06_util\010_ZZATURI
+6=x:\A1_exaVideo
+7=d:\09_hardRain\08_ihanseol - 2023
+8=d:\09_hardRain
+9=c:\Users\minhwasoo\Documents\SynEdit
+10=c:\Users\minhwasoo\Documents\P4D
+11=d:\05_Send
+12=C:\Program Files\totalcmd
+13=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+14=z:\11_exaData
+15=F:\11_exaData\06_util
+16=f:\
+17=f:\11_exaData\06_util
+18=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+19=z:\11_exaData\06_util
