--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -122,72 +122,74 @@ menu66=Sublime Packages
 cmd66=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
 menu67=Sublime Packages User
 cmd67=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu68=gen_py
-cmd68=cd c:\Users\minhwasoo\AppData\Local\Temp\gen_py
-menu69=AppData --> Local
-cmd69=cd C:\Users\minhwasoo\AppData\Local
-menu70=AddData --> Roaming
-cmd70=cd C:\Users\minhwasoo\AppData\Roaming
-menu71=Appdata --> FlowLauncher CustomIcons
-cmd71=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu72=Appdata --> Bing WPImages
-cmd72=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu73=Appdata --> WindowsTerminal Setting
-cmd73=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu74=ProgramData
-cmd74=cd C:\ProgramData
-menu75=programdata ---> 01_Inspection Tool
-cmd75=cd C:\ProgramData\36_Automation\01_Inspection Tool
-menu76=--
-menu77=-12_dev --> excel
-menu78=d:/12_dev/  Action and Configuration
-cmd78=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu79=02_Excel   --> 07_LandSlide
-cmd79=cd d:\12_dev\02_Excel\07_LandSlide
-menu80=02_Excel2 --> 01_Acquifer Pumping Test
-cmd80=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
-menu81=04_PyhtonDemoDojang
-cmd81=cd d:\12_dev\04_PyhtonDemoDojang
-menu82=--
-menu83=-HardRain, Report
-menu84=WHPA
-cmd84=cd c:\WHPA
-menu85=04_Reference Data
-cmd85=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu86=11_JungCheon Photo by Season
-cmd86=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu87=05_ihanseol - 2020
-cmd87=cd d:\09_hardRain\05_ihanseol - 2020
-menu88=06_ihanseol - 2021
-cmd88=cd d:\09_hardRain\06_ihanseol - 2021
-menu89=07_ihanseol - 2022
-cmd89=cd d:\09_hardRain\07_ihanseol - 2022
-menu90=08_ihanseol - 2023
-cmd90=cd d:\09_hardRain\08_ihanseol - 2023
-menu91=--
-menu92=02_Book
-cmd92=cd d:\02_Book
-menu93=03_download
-cmd93=cd d:\03_download
-menu94=03_my_script
-cmd94=cd d:\12_dev\03_visual_lisp\03_my_script
-menu95=08_나의작업
-cmd95=cd d:\08_나의작업\
-menu96=04_mp3
-cmd96=cd d:\04_mp3
-menu97=05_Send
-cmd97=cd d:\05_Send
-menu98=06_Send2
-cmd98=cd d:\06_Send2
-menu99=C:_Temp
-cmd99=cd c:\Temp
-menu100=e: download
-cmd100=cd e:\download
-menu101=Bing
-cmd101=cd d:\10_photo\Desktop Pictures\bing
-menu102=13_ExaVideo
-cmd102=cd d:\13_ExaVideo
-menu103=NAS4DUAL 06_util
-cmd103=cd z:\11_exaData\06_util
-menu104=Nas --> 08_ihanseol - 2023
-cmd104=cd z:\09_hardRain\08_ihanseol - 2023
+menu68=qt5_bin
+cmd68=cd C:\Users\minhwasoo\AppData\Local\Programs\Python\Python311\Lib\site-packages\qt5_applications\Qt\bin
+menu69=gen_py
+cmd69=cd c:\Users\minhwasoo\AppData\Local\Temp\gen_py
+menu70=AppData --> Local
+cmd70=cd C:\Users\minhwasoo\AppData\Local
+menu71=AddData --> Roaming
+cmd71=cd C:\Users\minhwasoo\AppData\Roaming
+menu72=Appdata --> FlowLauncher CustomIcons
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu73=Appdata --> Bing WPImages
+cmd73=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu74=Appdata --> WindowsTerminal Setting
+cmd74=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu75=ProgramData
+cmd75=cd C:\ProgramData
+menu76=programdata ---> 01_Inspection Tool
+cmd76=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu77=--
+menu78=-12_dev --> excel
+menu79=d:/12_dev/  Action and Configuration
+cmd79=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu80=02_Excel   --> 07_LandSlide
+cmd80=cd d:\12_dev\02_Excel\07_LandSlide
+menu81=02_Excel2 --> 01_Acquifer Pumping Test
+cmd81=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu82=04_PyhtonDemoDojang
+cmd82=cd d:\12_dev\04_PyhtonDemoDojang
+menu83=--
+menu84=-HardRain, Report
+menu85=WHPA
+cmd85=cd c:\WHPA
+menu86=04_Reference Data
+cmd86=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu87=11_JungCheon Photo by Season
+cmd87=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu88=05_ihanseol - 2020
+cmd88=cd d:\09_hardRain\05_ihanseol - 2020
+menu89=06_ihanseol - 2021
+cmd89=cd d:\09_hardRain\06_ihanseol - 2021
+menu90=07_ihanseol - 2022
+cmd90=cd d:\09_hardRain\07_ihanseol - 2022
+menu91=08_ihanseol - 2023
+cmd91=cd d:\09_hardRain\08_ihanseol - 2023
+menu92=--
+menu93=02_Book
+cmd93=cd d:\02_Book
+menu94=03_download
+cmd94=cd d:\03_download
+menu95=03_my_script
+cmd95=cd d:\12_dev\03_visual_lisp\03_my_script
+menu96=08_나의작업
+cmd96=cd d:\08_나의작업\
+menu97=04_mp3
+cmd97=cd d:\04_mp3
+menu98=05_Send
+cmd98=cd d:\05_Send
+menu99=06_Send2
+cmd99=cd d:\06_Send2
+menu100=C:_Temp
+cmd100=cd c:\Temp
+menu101=e: download
+cmd101=cd e:\download
+menu102=Bing
+cmd102=cd d:\10_photo\Desktop Pictures\bing
+menu103=13_ExaVideo
+cmd103=cd d:\13_ExaVideo
+menu104=NAS4DUAL 06_util
+cmd104=cd z:\11_exaData\06_util
+menu105=Nas --> 08_ihanseol - 2023
+cmd105=cd z:\09_hardRain\08_ihanseol - 2023
