--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -51,45 +51,45 @@
 
 
 [SearchName]
-0=수부리
-1=보름달과
-2=전주
-3=special
-4=HWPWMko-KR120
-5=process
-6=distant
-7=qbit
-8=ezpdf
-9=bak
-10=1143
-11=inc
-12=bpl
-13=tera
-14=terra
-15=*.aqt
-16=aqtw*.exe
-17=aqu*.exe
-18=aqutesolv
-19=emf
+0=태양
+1=수부리
+2=보름달과
+3=전주
+4=special
+5=HWPWMko-KR120
+6=process
+7=distant
+8=qbit
+9=ezpdf
+10=bak
+11=1143
+12=inc
+13=bpl
+14=tera
+15=terra
+16=*.aqt
+17=aqtw*.exe
+18=aqu*.exe
+19=aqutesolv
 
 [SearchIn]
-0=d:\09_hardRain\01_2017
-1=d:\02_Book
-2=d:\09_hardRain\08_ihanseol - 2023\Z01_소소한작업들
-3=d:\11_exaData\06_util
-4=c:\Users\minhwasoo\AppData\Roaming\Hnc\User
-5=d:\11_exaData\06_util\010_ZZATURI
-6=x:\A1_exaVideo
-7=d:\09_hardRain\08_ihanseol - 2023
-8=d:\09_hardRain
-9=c:\Users\minhwasoo\Documents\SynEdit
-10=c:\Users\minhwasoo\Documents\P4D
-11=d:\05_Send
-12=C:\Program Files\totalcmd
-13=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-14=z:\11_exaData
-15=F:\11_exaData\06_util
-16=f:\
-17=f:\11_exaData\06_util
-18=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-19=z:\11_exaData\06_util
+0=d:\04_mp3\성시경님
+1=d:\09_hardRain\01_2017
+2=d:\02_Book
+3=d:\09_hardRain\08_ihanseol - 2023\Z01_소소한작업들
+4=d:\11_exaData\06_util
+5=c:\Users\minhwasoo\AppData\Roaming\Hnc\User
+6=d:\11_exaData\06_util\010_ZZATURI
+7=x:\A1_exaVideo
+8=d:\09_hardRain\08_ihanseol - 2023
+9=d:\09_hardRain
+10=c:\Users\minhwasoo\Documents\SynEdit
+11=c:\Users\minhwasoo\Documents\P4D
+12=d:\05_Send
+13=C:\Program Files\totalcmd
+14=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+15=z:\11_exaData
+16=F:\11_exaData\06_util
+17=f:\
+18=f:\11_exaData\06_util
+19=z:\11_exaData\06_util\010_ZZATURI\00_Internet
