--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -174,6 +174,17 @@ cmd="c:\Program Files\totalcmd\ini\02_python\p2image.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu=Convert PDF to Image 
 
+[em_ImageTrim]
+cmd=python "c:\Program Files\totalcmd\ini\02_python\imageTrim.py"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= Image Trim
+
+[em_Pdf2ImageAndTrim]
+cmd="c:\Program Files\totalcmd\ini\02_python\p2_pdf2image_trim.cmd"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= pdf2image & Trim
+
+
 [em_RunAQT]
 cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
@@ -184,10 +195,6 @@ cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd single"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu= single graph generation, aqt --> pdf
 
-[em_ImageTrim]
-cmd=python "c:\Program Files\totalcmd\ini\02_python\imageTrim.py"
-button=%commander_path%\ini\icons dll\minhwasoo.icl,87
-menu= Image Trim
 
 [em_GenerateRandomString]
 cmd= "c:\Program Files\totalcmd\ini\02_python\RandomString.cmd"
